updated the channel member endpoint
